<resources>
    <string name="app_name">Meu Gato Sem Nome</string>
    <string name="foto_do_gato">foto_do_gato</string>
    <string name="n_o">Não</string>
    <string name="possui_alguma_doen_a">Possui alguma doença?</string>
    <string name="sim">Sim</string>
    <string name="nome_da_doen_a">Nome da Doença:</string>
    <string name="n_mero_de_filhotes">Número de filhotes:</string>
    <string name="idade_em_anos">Idade em anos:</string>
    <string name="animais_cadastrados">Animais Cadastrados</string>
    <string name="salvar">Salvar</string>
    <string name="adicionar_novo_animal">Adicionar Novo Animal</string>
    <string name="home_button">Home Button</string>
    <string name="informa_es_do_animal">Informações do Animal</string>
    <string name="op_es_do_animal">Opções do Animal</string>
    <string name="selecione_uma_foto">Selecione uma foto</string>
    <string name="fotodogato">foto do gato</string>
    <string name="id">ID:</string>
    <string name="doen_a">Doença?</string>
    <string name="descri_o">Descrição:</string>
    <string name="castrado">Castrado?</string>
    <string name="n_filhotes">NºFilhotes:</string>
    <string name="idade">Idade:</string>
    <string name="quantidade_de_filhotes">Quantidade de filhotes:</string>
    <string name="imagem">imagem</string>
    <string name="imagem_do_gato">Imagem do gato</string>
    <string name="sexo">Sexo:</string>
    <string name="qual_o_sexo_do_gato">Qual o sexo do gato?</string>
    <string name="f_mea">Fêmea</string>
    <string name="doa_es">Doações</string>

    <string-array name="activity_opcao_gato_sexo_recebido_Spinner">
        <item>Macho</item>
        <item>Fêmea</item>
    </string-array>

    <string-array name="activity_opcao_gato_doenca_recebida_Spinner">
        <item>Não possui nenhuma doença</item>
        <item>Possui alguma doença</item>
    </string-array>

    <string-array name="activity_opcao_gato_castrado_recebido_Spinner">
        <item>Não é castrado</item>
        <item>É castrado</item>
    </string-array>

    <string-array name="spinner_filtro">
        <item>Redefinir filtros</item>
        <item>Machos</item>
        <item>Fêmeas</item>
        <item>Com doenças</item>
        <item>Sem doenças</item>
        <item>Castrados</item>
        <item>Não castrados</item>
        <item>Com filhotes</item>
        <item>Sem filhotes</item>
        <item>Com menos de 1 ano</item>
        <item>Com mais de 1 ano</item>
    </string-array>
</resources>