<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#429db0"
    android:orientation="vertical"
    tools:context=".activities.TelaAdicionarGato">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonVoltarTelaGato"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/home_button"
            android:padding="16dp"
            app:srcCompat="@drawable/botaovoltar"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/adicionar_novo_animal"
            android:textAlignment="center"
            android:textColor="#EF758C"
            android:textSize="29sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageAdicionarGato"
        android:layout_width="264dp"
        android:layout_height="215dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/iconegato" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/buttonSelecionarImagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#EF758C"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="@string/selecione_uma_foto"
        android:textColor="#429db0"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:backgroundTint="#EF758C"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="@string/possui_alguma_doen_a"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#000000"
            android:text="@string/n_o" />


        <Switch
            android:id="@+id/switchDoenca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#000000"
            android:text="@string/sim" />
    </LinearLayout>

    <EditText
        android:id="@+id/editDescricaoDoenca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:hint="@string/nome_da_doen_a"
        android:padding="16dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:text="@string/castrado"
        android:fontFamily="serif"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#000000"
            android:text="@string/n_o" />

        <Switch
            android:id="@+id/switchCastrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#000000"
            android:text="@string/sim" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/editFilhotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:hint="@string/n_mero_de_filhotes"
        android:inputType="number"
        android:fontFamily="serif"
        android:padding="16dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/editIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:fontFamily="serif"
        android:textColor="#000000"
        android:hint="@string/idade_em_anos"
        android:inputType="number"
        android:padding="16dp" />

    <Button
        android:id="@+id/buttonSalvarGato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#EF758C"
        android:fontFamily="serif"
        android:textSize="34sp"
        android:gravity="center_horizontal"
        android:textColor="#429db0"
        android:text="@string/salvar"/>


</LinearLayout>