<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#D11313"
    android:visibility="visible"
    tools:visibility="visible">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A13434"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgGato"
                android:layout_width="132dp"
                android:layout_height="104dp"
                android:contentDescription="@string/fotodogato"
                android:src="@drawable/iconegato" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/doen_a" />

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descri_o" />

                <TextView
                    android:id="@+id/txt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/castrado" />

                <TextView
                    android:id="@+id/txt5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/n_filhotes" />

                <TextView
                    android:id="@+id/txt6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idade" />
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/doenca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/castrado"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/filhotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/idade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>