<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#429db0"
    android:orientation="vertical"
    tools:context=".activities.TelaOpcaoGato">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonVoltarTelaGato"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/home_button"
            android:padding="16dp"
            app:srcCompat="@drawable/botaovoltar"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textview"
            android:layout_width="278dp"
            android:layout_height="match_parent"
            android:fontFamily="serif"
            android:text="@string/animais_cadastrados"
            android:textAlignment="center"
            android:textColor="#EF758C"
            android:textSize="29sp"
            tools:text="Opções do animal " />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/activity_opcao_gato_icone"
        android:layout_width="218dp"
        android:layout_height="202dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/imagem_do_gato"
        android:src="@drawable/iconegato" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="Id:"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/activity_opcao_gato_id_recebido_TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="serif"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Sexo:"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/activity_opcao_gato_sexo_recebido_Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/activity_opcao_gato_sexo_recebido_Spinner"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Doença:"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/activity_opcao_gato_doenca_recebida_Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/activity_opcao_gato_doenca_recebida_Spinner"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Descrição:"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/activity_opcao_gato_descricao_recebida_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/descri_o"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Castrado:"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/activity_opcao_gato_castrado_recebido_Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/activity_opcao_gato_castrado_recebido_Spinner"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/quantidade_de_filhotes"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/activity_opcao_gato_filhotes_recebido_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/n_mero_de_filhotes"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Idade em anos:"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/activity_opcao_gato_idade_recebida_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/idade"
            android:inputType="text"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_opcao_gato_buttonAtualizarGato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#EF758C"
            android:fontFamily="serif"
            android:text="Atualizar"
            android:textColor="#429db0"
            android:textSize="20sp" />

        <Button
            android:id="@+id/activity_opcao_gato_buttonExcluirGato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#EF758C"
            android:fontFamily="serif"
            android:text="Excluir"
            android:textColor="#429db0"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>